# flipper-cec-game-module

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.c
.github/workflows/: build.yml
